--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -29,12 +29,13 @@
         {{ form.password_hash2(class = "form-control") }}
         <br/>
         {{ form.submit(class = 'btn btn-primary')}}
+        
 
     </form>
 </div>
 <br/><br/>
 {% for our_user in our_users %}
-    {{ our_user.id }}. {{ our_user.name }} - {{ our_user.password_hash }} - {{ our_user.email }}
+    {{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }}
      <br/>
 {% endfor %}
 {% endif %}
