--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% if name %}
-    <h1>Hello {{ name }} !!</h1>
+    <h1>Welcome {{ name }} !!</h1>
 {% else %}
     <h1><p style = "color: white">Create an acccount:</h1>
     <br/>
@@ -28,6 +28,9 @@
         {{ form.password_hash2.label(class = "form-label") }}
         {{ form.password_hash2(class = "form-control") }}
         <br/>
+        {{ form.business.label(class = "form-label") }}
+        {{ form.business(class = "form-control") }}
+        <br/>
         {{ form.submit(class = 'btn btn-primary')}}
         
 
@@ -35,7 +38,7 @@
 </div>
 <br/><br/>
 {% for our_user in our_users %}
-    {{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }}
+    {{ our_user.id }}. {{ our_user.password_hash }} - {{ our_user.email }}
      <br/>
 {% endfor %}
 {% endif %}
