--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0de3eb;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Campus Loop</a>
+      <a class="navbar-brand" href="{{url_for('signup')}}">Campus Loop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
