--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0de3eb;">
+
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-expand-lg" style="background-color: #b4e3d9;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{url_for('signup')}}">Campus Loop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,19 +13,7 @@
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('dashboard')}}">Profile</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" aria-expanded="false">
-              
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href = "{{url_for('add_user')}}"></a>
+
           </li>
           {% if current_user.is_authenticated %}
           <li class="nav-item">
