--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
- 
+<h1> <p style="color:rgb(255, 255, 255)">Login</h1>
 <Div class = "shadow p-3 mb-5 bg-body rounded">
     <form method = "POST">
         {{ form.hidden_tag() }}
