--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,10 +10,14 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{url_for('home2')}}">Feed</a>
           </li>
+          {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link " href = "{{url_for('home1')}}">Your Feed</a>
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('dashboard')}}">Profile</a>
           </li>
-
           </li>
           {% if current_user.is_authenticated %}
           <li class="nav-item">
