--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,9 +19,7 @@
     <strong>Username: </strong>{{ current_user.username }}</br>
     <strong>User Id: </strong>{{ current_user.id }}</br>
     <strong>Email: </strong>{{ current_user.email }}</br>
-    <strong>Likes: </strong>{{ current_user.likes }}</br>
-    <strong>Likes: </strong>{{ current_user.likes2 }}</br>
-    <strong>Likes: </strong>{{ current_user.likes3 }}</br>
+    <strong>Likes: </strong>{{ current_user.likes }}, {{ current_user.likes2 }}, {{ current_user.likes3 }} </br>
     <strong>Date Joined: </strong>{{ current_user.date_added }}</br>
     <strong>Business: </strong>{{ current_user.business }}</br>
 
