--- a/templates/home1.html
+++ b/templates/home1.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1> <p style="color:rgb(255, 255, 255)">Your Newsfeed</h1>
+<h1> <p style="color:rgb(255, 255, 255)">My Newsfeed</h1>
 <br/>
     {% for post in posts %}
         {% if current_user.likes == post.tag or current_user.likes == post.tag2 or current_user.likes == post.tag3 or current_user.likes2 == post.tag or current_user.likes2 == post.tag2 or current_user.likes2 == post.tag3 or current_user.likes3 == post.tag or current_user.likes3 == post.tag2 or current_user.likes3 == post.tag3 %}
