--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
           </li>
           {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link " href = "{{url_for('home1')}}">Your Feed</a>
+            <a class="nav-link" href = "{{url_for('home1')}}">My Feed</a>
           </li>
           {% endif %}
           <li class="nav-item">
